# mindmesh

./: .env.example  .gitignore  .mindmesh.example.yml  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: mindmesh-review.yml
docs/: ROADMAP.md  projects.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/agents/: bug-hunter.md  codebase-analyst.md  external-consultant.md  security-reviewer.md  test-planner.md
plugin/skills/ask-provider/: SKILL.md
plugin/skills/bug-investigate/: SKILL.md
plugin/skills/compare/: SKILL.md
plugin/skills/delegate/: SKILL.md
plugin/skills/list-endpoints/: SKILL.md
plugin/skills/multi-review/: SKILL.md
plugin/skills/plan/: SKILL.md
plugin/skills/preview/: SKILL.md
plugin/skills/security-audit/: SKILL.md
plugin/skills/test-patch/: SKILL.md
plugin/skills/validate/: SKILL.md
src/mindmesh/: audit.py  cache.py  cli.py  config.py  errors.py  history.py  registry.py  schemas.py  server.py  worktree.py
src/mindmesh/context/: collector.py  compressor.py  filters.py  git.py  redactor.py  summarizer.py  tokenizer.py
src/mindmesh/output/: merger.py  normalizer.py  report.py  sarif.py
src/mindmesh/policy/: file_policy.py  permission_policy.py  provider_policy.py
src/mindmesh/prompts/: __init__.py  ask.md  bug_investigate.md  commit.md  compare.md  delegate.md  plan.md  pr.md  review.md  security.md
src/mindmesh/providers/: base.py  gemini.py  ollama.py  openai.py  zai.py
src/mindmesh/scanners/: __init__.py  bandit.py  base.py  semgrep.py
src/mindmesh/tools/: ask.py  bugfix.py  compare.py  delegate.py  list_endpoints.py  preview.py  review.py  scan.py  security.py  test_patch.py  validate.py
tests/: test_ask_tool.py  test_audit.py  test_bugfix_tool.py  test_cache.py  test_collector.py  test_compare_tool.py  test_compressor.py  test_config.py  test_delegate_tool.py  test_errors.py  test_file_policy.py  test_filters.py  test_gemini_adapter.py  test_git.py  test_git_helpers.py  test_list_endpoints.py  test_merger.py  test_normalizer.py  test_openai_adapter.py  test_permission_policy.py  test_policy_report.py  test_preview.py  test_prompt_loader.py  test_prompts.py  test_provider_base.py  test_provider_policy.py  test_redactor.py  test_registry.py  test_reporter.py  test_review_tool.py  test_sarif.py  test_scan_tool.py  test_schemas.py  test_security_tool.py  test_server.py  test_test_patch_tool.py  test_tokenizer.py
