[project]
name = "mindmesh-ai"
version = "0.2.1"
description = "Multi-provider AI orchestration for Claude Code — review, security audit, and analysis via OpenAI, Gemini, Z.ai, Ollama"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    {name = "PsyChaos", email = "psychaos@gmail.com"},
]
keywords = ["claude", "mcp", "ai", "code-review", "security", "orchestration", "openai", "gemini", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "mcp[cli]>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
gemini = ["google-genai>=1.0"]
all = ["openai>=1.50", "google-genai>=1.0"]

[project.urls]
Homepage = "https://github.com/PsyChaos/mindmesh"
Repository = "https://github.com/PsyChaos/mindmesh"
Issues = "https://github.com/PsyChaos/mindmesh/issues"

[project.scripts]
mindmesh-mcp = "mindmesh.server:main"
mindmesh = "mindmesh.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindmesh"]
artifacts = ["src/mindmesh/prompts/*.md"]

[tool.hatch.build.targets.wheel.shared-data]
"plugin" = "share/mindmesh/plugin"
".mindmesh.example.yml" = "share/mindmesh/.mindmesh.example.yml"
".env.example" = "share/mindmesh/.env.example"

[tool.hatch.build.targets.sdist]
include = [
    "src/mindmesh/",
    "plugin/",
    "tests/",
    ".mindmesh.example.yml",
    ".env.example",
    "README.md",
    "LICENSE",
    "CONTEXT.md",
    "AGENTS.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
    "openai>=1.50",
    "google-genai>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
